# LangChainHCCourse2

./: README.md  pyproject.toml
course_2/: chat.ipynb  document_loading.ipynb  document_splitting.ipynb  question_answering.ipynb  retrieval.ipynb  vectorstores_and_embeddings.ipynb
course_2/docs/chroma/: chroma.sqlite3
