[tool.poetry]
name = "course-2"
version = "0.1.0"
description = ""
authors = ["RutamBhagat <rutambhagat@gmail.com>"]
readme = "README.md"
packages = [{include = "course_2"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-openai = "^0.1.4"
python-dotenv = "^1.0.1"
pypdf = "^4.2.0"
yt-dlp = "^2024.4.9"
pydub = "^0.25.1"
ffmpeg = "^1.4"
ffprobe = "^0.5"
bs4 = "^0.0.2"
chromadb = "^0.5.0"
lark = "^1.1.9"
scikit-learn = "^1.4.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
param = "^2.1.0"
panel = "^1.4.2"
docarray = "^0.40.0"
pydantic = "1.10.9"
jupyter-bokeh = "^4.0.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
